Made Some Changes to the API

--- a/Admin/.env
+++ b/Admin/.env
@@ -2,6 +2,6 @@ HOSTNAME=localhost
 PORT=7010
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASSWORD=coldflame
+DB_PASSWORD=08028311645
 DB_NAME=ebdb
 JWT_SECRET_TOKEN=qwertyuiop
