--- a/Users/.env
+++ b/Users/.env
@@ -2,6 +2,6 @@ HOSTNAME=localhost
 PORT=7000
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASSWORD=coldflame
+DB_PASSWORD=08028311645
 DB_NAME=ebdb
 JWT_SECRET_KEY=qwertyuiop
